# gemini-textboard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  gemini-textboard.cabal
.builds/: 8.10.1.yml  8.8.3.yml  ghc-8.10.1.yml  ghc-8.10.3.yml  ghc-8.8.3.yml  ghc-8.8.4.yml  sdist.yml
app/: Main.hs
