cabal-version:       2.2

name:                gemini-textboard
version:             0.1.0.0
synopsis:            A barebones textboard for the Gemini protocol
-- description:
homepage:            https://sr.ht/~fgaz/haskell-gemini/
bug-reports:         https://todo.sr.ht/~fgaz/haskell-gemini
license:             BSD-3-Clause
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          Francesco Gazzetta <fgaz@fgaz.me>
copyright:           © 2020 Francesco Gazzetta and contributors
category:            Gemini
extra-source-files:  CHANGELOG.md

source-repository head
  type:                git
  location:            https://git.sr.ht/~fgaz/gemini-textboard

executable gemini-textboard
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , gemini-server
                     , gemini-router
                     , language-gemini
                     , nonce
                     , cache
                     , sqlite-simple
                     , clock
                     , text
                     , time
                     , network-uri
                     , transformers
  hs-source-dirs:      app
  ghc-options:         -Wall
  default-language:    Haskell2010

